@@ -1,0 +1,22 @@
+//
+// MonoDocument.cs: Class that reads an Monodoc XML Documentation.
+//
+// Author:
+//   Hector E. Gomez M (hectorgm@ciencias.unam.mx)
+//
+// (C) 2007 Hector E. Gomez M
+
+using System;
+using System.IO;
+using System.Xml;
+using System.Xml.Schema;
+using System.Reflection;
+
+namespace Monodoc.EcmaUtils {
+public class MonoDocument {
+	
+	public MonoDocument ()
+	{
+	}
+}
+}
