@@ -1,5 +1,13 @@
 2007-06-14  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
+	* EcmaUtils/Test/TestMonoDocument.cs, EcmaUtils/Test/TestEcmaReader.cs,
+	  EcmaUtils/EcmaUtils.mdp, EcmaUtils/MonoDocument.cs,
+	  EcmaUtils/EcmaReader.cs: Added MonoDocument class that represents a
+	  monodoc ECMA-based documentation. Added a test unit for the class
+	  too.
+
+2007-06-14  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
 	* EcmaUtils/Test, EcmaUtils/Test/TestEcmaReader.cs,
 	  EcmaUtils/Test/Examples, EcmaUtils/Test/Examples/Accel.xml,
 	  EcmaUtils/Test.cs, EcmaUtils/EcmaUtils.mdp: Adding unit test
